css/style.css
/*********************************************
 * Sections:
 * 1. General
 * 2. Navbar & home
 * 3. About
 * 4. Skills
 * 5. Projects
 * 6. Contact
 * 7. Footer
 * 8. Media
 **********************************************/



/*************************************************************
 * 1. GENERAL
 *************************************************************/
body, html {
    background-color: rgb(253, 253, 253);
    line-height: 1.8;
    box-sizing:border-box;
    overflow: scroll;
    overflow-x: hidden;
}
body,h1,h2,h3,h4,h5,h6 {
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  color: #dddddd;
}
.hide {
  display: none;
}
.loader {
  color: #575757;
  height: 100vh;
  position: relative;
  width: 100vw;
  z-index: 99;
}

/**** get aspect ratio set ****/
.aspect {
  height: 100%;  /* not working in ang */
  margin-top: 15px;
  margin-bottom: 15px;
  position: relative;

  /* this drives aspect ratio - note % based on width of container */
  padding-top: 80%;
}

/**** positioning for aspect ratio ****/
.infoCard {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
} 

/**** misc positioning ****/
.homeContainer .socMedia, .contactText .socMedia {
  position: absolute;
}
.homeContainer, .contactText {
  position: relative;
}

/*center class from CSS tricks*/
.center {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
}
/*****************  general margins, sizing etc********************/
.skillsList, .projectList {
  margin-top: 20px;
  margin-bottom: 50px;
}
.col-12, .col-lg-4, .col-md-6 {
  margin: auto;
}
.infoCard {
  text-align: center;
  font-size: calc(16px + .5vw);
  line-height: 1.2;
  padding: 5px;
  margin: 10px;
}
.infoCard .fitImage {
  height: 75%;
}
.notes, .trans3, .trans1, .trans2, .projNotes {
  padding-top: 10vh;
}
.trans3, .trans1, .trans2, .projNotes {
  padding-bottom: 5vh;
}
.trans1, .trans3, .trans2 {
  width: 100%;
  height: 100%;
  min-height: 100vh;
}

/*****************  general colors & opacities ********************/
.contactText a, .projectList .infoCard a {
  color: #55d1f7;
  text-decoration: underline;
  opacity: .6;
}
.notes, .projNotes {
  background-color: rgb(222, 222, 222);
}
.notes h2, .notes p, .mySkills h2 {
  color: black;
}
.socMedia a {
  color: #dddddd;
  text-decoration: none;
  opacity: .6;
  margin: 5px;
}
.socMedia a:hover, .projectList a:hover, .contactText a:hover {
  opacity: 1;
}

/**** other general ****/
::-webkit-scrollbar {
    width: 0px;  /* remove scrollbar space */
}

/*************************************************************
 * 2. NAVBAR and HOME 
 *************************************************************/

.navbar-brand {
  font-size: 140%;
}
.navbar .myMenu li:hover {
  font-weight: 800;
}
.myMenu a {
  font-size: 120%;
}
ul.myMenu {
  margin: auto;
  width: 800%;
  justify-content: flex-end;
}
.myMenu li {
  text-align: center;
}
.homeContainer {
  height: 100%;
}
.homeContainer h1, .homeContainer h4 {
  color: white;
}
.homeContainer .socMedia {
  text-align: center;
  left:0;
  right:0;
  bottom: 0;
}
.jumbotron {
  background: transparent;
}
.jumbotron h1, .navbar-brand {
  font-family: 'Sedgwick Ave', cursive;
}
.bgimg-1 .container {
  background-color: transparent;
}
.bgimg-1 .jumbotron {
  padding-top: 40vh;
}

/*************************************************************
 * 3. ABOUT 
 *************************************************************/
.notes .jumbotron {
  margin-bottom: 0;
}

/*************************************************************
 * 4. SKILLS 
 *************************************************************/
.skillCards {
  padding: 5px!important;
}
.skillCards:nth-child(5n + 1) .infoCard {
  background-color: rgba(33, 38, 77, 0.9);
}
.skillCards:nth-child(5n + 2) .infoCard {
  background-color: rgba(32, 99, 63, 0.9);
}
.skillCards:nth-child(5n + 3) .infoCard {
  background-color: rgba(116, 27, 41, .9);
}
.skillCards:nth-child(5n + 4) .infoCard {
  background-color: rgba(16, 83, 135, 0.9);
}
.skillCards:nth-child(5n) .infoCard {
  background-color: rgba(34, 34, 34, 0.9);
}
.bgimg-2 {
  background-attachment: fixed;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
}
.trans2 {
  background-color: rgba(0, 0, 0, 0.2);
}

/*************************************************************
 * 5. PROJECTS 
 *************************************************************/
.projectList .infoCard p {
  text-align: left;
  padding: 2px 10px;
}  
.projectList .infoCard img {
  max-width: 100%;
  max-height: 100%;
}
.projectList .infoCard a {
  font-weight: 600;
}
.projectList .infoCard p {
  color: white;
}
.projectList .infoCard {
  background-color: rgb(31, 27, 40);
  -webkit-box-shadow: 4px 7px 10px 0px rgba(0,0,0,0.74);
  -moz-box-shadow: 4px 7px 10px 0px rgba(0,0,0,0.74);
  box-shadow: 4px 7px 10px 0px rgba(0,0,0,0.74);
}
.projNotes h2, .projNotes p, .mySkills h2 {
  color: black;
}

/*************************************************************
 * 6. CONTACT
 *************************************************************/
.contactMe.bgimg-3 {
  min-height: 100vh;
  height: 100%;
}
.contactPic img {
  background-color: rgb(31, 27, 40);
  -webkit-box-shadow: 14px 14px 10px 0px rgba(0,0,0,0.74);
  -moz-box-shadow: 14px 14px 10px 0px rgba(0,0,0,0.74);
  box-shadow: 14px 14px 10px 0px rgba(0,0,0,0.74);
}
.contactText {
  height: 277px;
}
.contactText .socMedia {
  text-align: left;
  bottom: 0;
}
.bgimg-3 {
  background-attachment: fixed;
  background-position: center 66px;
  background-repeat: repeat;
  background-size: auto calc(100vh - 66px);
  background-image: url("../images/Fib.png");
  height: 100vh;
}
.trans3 {
  background-color: rgba(15, 19, 50, 0.9);
}

/*************************************************************
 * 7. FOOTER
 *************************************************************/
.bottom {
  background-color: black;
}
.bottom .container {
  position: relative;
  height: 100px;
}
.bottom .container a {
  color: white;
  opacity: .7;
}
.bottom .container a:hover {
  opacity: 1;
  text-decoration: none;
}


/*********************************************************
 * 8. MEDIA
 ********************************************************/

/*
 * These screen sizes are based on bootstrap.css version 4
 * xs < 576px
 * sm >= 576px
 * md >= 768px
 * lg >= 992 px
 * xl >= 1200px
 */


/*xs screen*/
@media (min-width: 0px) {
  .contactPic img{
    display: block;
    margin: auto;
  }
  .contactText h4 {
    margin-top: 20px;
    font-size: 18px;
  }
  .contactText h5 {
    margin-bottom: 40px;
    font-size: 14px;
  }
  .contactText {
    text-align: center;
  }
  .contactText .socMedia {
    text-align: center;
    position: relative;
  }
  .navbar .myMenu li {
    background-color: black;
  }
  .navbar button {
    background-color: black;
    opacity: .3;
  }
  .navbar .myMenu li:hover {
    background-color: #212121;
  }
  .navbar-brand {
    display: none;
  }
  .myMenu li {
    width: 12%;
  }
  .projectList .infoCard p span{
    display:none;
  }
  .projectList .infoCard p{
    font-size: .65em;
  }  
  .jumbotron {
/*    padding-left: 8%;*/
  }
  .jumbotron h1 {
    font-size: 2.8rem;
  }
  .jumbotron h2 {
    font-size: 2.0rem;
  }
  .jumbotron h4 {
    font-size: 1.5rem;
  }
/*   too many issues getting photo to work with size cover on iPhone, so just use same thing as contact section*/
  .bgimg-1 {
    background-attachment: fixed;
    background-position: center 66px;
    background-repeat: repeat;
    background-size: auto calc(100vh - 66px);
    background-image: url("../images/Fib.png");
    height: 100vh;
  }
  .trans1 {
    background-color: rgba(15, 19, 50, 0.9);
  }
  .bgimg-2 .jumbotron, .contactMe.bgimg-3 .jumbotron, .projNotes .jumbotron {
    padding-bottom: 0;
  }
  .bgimg-2 .jumbotron, .projNotes .jumbotron {
    margin-bottom: 0;
  }
}

/*sm screen*/
@media (min-width: 576px) {
  .bottom .container a {
    font-size: 2em;
  }
  .contactText h4 {
    font-size: 24px;
  }
  .contactText h5 {
    font-size: 20px;
  }

  .projectList .infoCard p span{
    display:inline;
  }  
  .projectList .infoCard p{
    font-size: .8em;
  }  
  .jumbotron h1 {
    font-size: 3.0rem;
  }
  .jumbotron h2 {
    font-size: 2.2rem;
  }
  .bgimg-1 {
    background-image: url("../images/CanadaPhone.jpg");
    /*    using back color here because on some smaller devices image is not loading*/
    background-color: rgba(15, 19, 50, 0.9);
    background-attachment: fixed;
    background-position: center bottom;
    background-repeat: no-repeat;
    background-size: cover;
  }
  .trans1 {
    background-color: rgba(0, 0, 0, 0);
  }
  .bgimg-2 {
    background-image: url('../images/pencilsPhone2.jpg');
  }
}

/*md screen*/
@media (min-width: 768px) {
  .contactText h4 {
    margin-top: 0;
  }
  .contactText {
    text-align: left;  
  }
  .contactPic img{
    float: right;
  }
  .contactText .socMedia {
    text-align: left;
    position: absolute;
    bottom: 0;
  }
  .navbar, .navbar:hover {
    background-color: rgba(0, 0, 0, .7);
  }
  .navbar .myMenu li, .navbar button {
    background-color: inherit;
  }
  .navbar .myMenu li:hover {
    background-color: rgba(255, 255, 255, .2);
  }
  .navbar-brand {
    display:inherit;
  }
  .myMenu li {
    font-size: 80%;
    width: 14%;
  }
  .projectList .infoCard p {
    font-size: 16px;
  }
  .jumbotron h1 {
    font-size: 3.3rem;
  }
  .jumbotron h2 {
    font-size: 2.5rem;
  }
  .jumbotron h4 {
    font-size: 1.8rem;
  }
  .bgimg-1 {
    background-image: url("../images/IMG_0240Small.JPG");
  }
  .bgimg-2 {
    background-image: url('../images/pencils.jpg');
  }
/*  Revise bg colors on larger screen to make it have a more random look*/
  .skillCards:nth-child(5) .infoCard {
    background-color: rgba(116, 27, 41, .9);
  }
  .skillCards:nth-child(6) .infoCard {
    background-color: rgba(34, 34, 34, 0.9);
  }
  .skillCards:nth-child(7) .infoCard {
    background-color: rgba(16, 83, 135, 0.9);
  }
  .skillCards:nth-child(8) .infoCard {
    background-color: rgba(32, 99, 63, 0.9);
  }
  .skillCards:nth-child(9) .infoCard {
    background-color: rgba(34, 34, 34, 0.9);
  }
  .skillCards:nth-child(10) .infoCard {
    background-color: rgba(32, 99, 63, 0.9);
  }
  .skillCards:nth-child(11) .infoCard {*/
    background-color: rgba(33, 38, 77, 0.9);
  }
}

/*lg screen*/
@media (min-width: 992px) {
  .myMenu li {
    font-size: 100%;
    width: 12%;
  }
  .projectList .infoCard p {
    font-size: 14px;
  }
  .jumbotron h1 {
    font-size: 4.0rem;
  }
  .jumbotron h2 {
    font-size: 3.0rem;
  }
  .jumbotron h4 {
    font-size: 2.2rem;
  }
}

/*xl screen*/
@media (min-width: 1200px) {
/*  Revise bg colors on larger screen to make it have a more random look*/
  .skillCards:nth-child(5) .infoCard {
    background-color: rgba(34, 34, 34, 0.9);
  }
  .skillCards:nth-child(6) .infoCard {
    background-color: rgba(16, 83, 135, 0.9);
  }
  .skillCards:nth-child(7) .infoCard {
    background-color: rgba(116, 27, 41, .9);
  }
  .skillCards:nth-child(8) .infoCard {
    background-color: rgba(34, 34, 34, 0.9);
  }
  .skillCards:nth-child(9) .infoCard {
    background-color: rgba(16, 83, 135, 0.9);
  }
  .skillCards:nth-child(10) .infoCard {
    background-color: rgba(33, 38, 77, 0.9);
  }
  .skillCards:nth-child(11) .infoCard {
    background-color: rgba(32, 99, 63, 0.9);
  }
  .bgimg-2 .jumbotron, .contactMe.bgimg-3 .jumbotron, .projNotes .jumbotron {
    padding-bottom: 2rem;
  }
}

/*xxl screen*/
@media (min-width: 1600px) {
  .bgimg-2 .jumbotron, .contactMe.bgimg-3 .jumbotron, .projNotes .jumbotron {
    padding-bottom: 4rem;
  }
  .bgimg-2 .jumbotron, .projNotes .jumbotron {
    margin-bottom: 2rem;
  }

}

